--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
     <title>Overwatch</title>
 </head>
 <body>
-    <p><img src="myndir/overwatchLogo.png" alt="lol"></p>
+    <p><img src="myndir/overwatchLogo.png" alt="xd"></p>
     <h1><em><strong>OVERWATCH</strong></em></h1>
     <h3>we did it reddit
     </h3>
