--- a/index.html
+++ b/index.html
@@ -9,9 +9,31 @@
     <title>Overwatch</title>
 </head>
 <body>
-    <p><img src="myndir/overwatchLogo.png" alt="xd"></p>
-    <h1><em><strong>OVERWATCH</strong></em></h1>
-    <h3>we did it reddit
-    </h3>
+    <nav class="topnav">
+            <ul class="topmenu">
+                
+            </ul>
+        </nav>
+    <header>
+    </header>
+    <main class="container">
+        <nav>
+            <p>Hvenær hann kom út og hver bjó hann til</p>
+        </nav>
+        <nav>
+            <p>útskýra leikinn</p>
+        </nav>
+        <nav>
+            Roles
+        </nav>
+        <nav>
+            Þróun 
+        </nav>
+        <nav>
+            Lore
+        </nav>
+        <p><img src="myndir/overwatchLogo.png" alt="xd" width="100%"></p>
+    </main>
+
 </body>
 </html>
