Formatting og copy

--- a/index.html
+++ b/index.html
@@ -25,22 +25,25 @@
     </nav>
     <main class="container">
         <nav id="About">
-            <p>útskýra leikinn</p>
+            <h1>útskýra leikinn</h1>
             <p>Vivamus magna turpis, imperdiet et ex et, scelerisque luctus nulla. Nam accumsan ante arcu. Proin ultricies neque ut ante semper convallis. Donec et neque in nulla ultrices accumsan. Suspendisse quis lacus ac quam eleifend ullamcorper quis non lorem. Curabitur nec elit ac neque porta lobortis sit amet in quam. Suspendisse id nisl nec tellus bibendum placerat. Praesent suscipit, lorem a rutrum vestibulum, mi dolor tempus ante, ac tincidunt leo magna ut turpis. Pellentesque rutrum varius massa quis molestie. Cras condimentum, eros et convallis eleifend, orci eros dictum risus, sed pellentesque elit lorem et dui. Nullam neque augue, varius molestie cursus ut, bibendum vel eros. Pellentesque habitant morbi tristique senectus et netus et malesuada fames ac turpis egestas. Nullam vitae venenatis orci, id rutrum nisl. In condimentum pharetra volutpat. Quisque quis diam id neque feugiat ultricies.</p>
         </nav>
         <nav id="Roles">
-            <p>Roles</p>
+            <h1>Roles</h1>
             <p>Vivamus magna turpis, imperdiet et ex et, scelerisque luctus nulla. Nam accumsan ante arcu. Proin ultricies neque ut ante semper convallis. Donec et neque in nulla ultrices accumsan. Suspendisse quis lacus ac quam eleifend ullamcorper quis non lorem. Curabitur nec elit ac neque porta lobortis sit amet in quam. Suspendisse id nisl nec tellus bibendum placerat. Praesent suscipit, lorem a rutrum vestibulum, mi dolor tempus ante, ac tincidunt leo magna ut turpis. Pellentesque rutrum varius massa quis molestie. Cras condimentum, eros et convallis eleifend, orci eros dictum risus, sed pellentesque elit lorem et dui. Nullam neque augue, varius molestie cursus ut, bibendum vel eros. Pellentesque habitant morbi tristique senectus et netus et malesuada fames ac turpis egestas. Nullam vitae venenatis orci, id rutrum nisl. In condimentum pharetra volutpat. Quisque quis diam id neque feugiat ultricies.</p>
         </nav>
         <nav id="Development">
-            <p>Þróun</p>
+            <h1>Þróun</h1>
             <p>Vivamus magna turpis, imperdiet et ex et, scelerisque luctus nulla. Nam accumsan ante arcu. Proin ultricies neque ut ante semper convallis. Donec et neque in nulla ultrices accumsan. Suspendisse quis lacus ac quam eleifend ullamcorper quis non lorem. Curabitur nec elit ac neque porta lobortis sit amet in quam. Suspendisse id nisl nec tellus bibendum placerat. Praesent suscipit, lorem a rutrum vestibulum, mi dolor tempus ante, ac tincidunt leo magna ut turpis. Pellentesque rutrum varius massa quis molestie. Cras condimentum, eros et convallis eleifend, orci eros dictum risus, sed pellentesque elit lorem et dui. Nullam neque augue, varius molestie cursus ut, bibendum vel eros. Pellentesque habitant morbi tristique senectus et netus et malesuada fames ac turpis egestas. Nullam vitae venenatis orci, id rutrum nisl. In condimentum pharetra volutpat. Quisque quis diam id neque feugiat ultricies.</p>
         </nav>
         <nav id="Lore">
-            <p>Lore</p>
+            <em><h1>Lore</h1></em>
             <p>Vivamus magna turpis, imperdiet et ex et, scelerisque luctus nulla. Nam accumsan ante arcu. Proin ultricies neque ut ante semper convallis. Donec et neque in nulla ultrices accumsan. Suspendisse quis lacus ac quam eleifend ullamcorper quis non lorem. Curabitur nec elit ac neque porta lobortis sit amet in quam. Suspendisse id nisl nec tellus bibendum placerat. Praesent suscipit, lorem a rutrum vestibulum, mi dolor tempus ante, ac tincidunt leo magna ut turpis. Pellentesque rutrum varius massa quis molestie. Cras condimentum, eros et convallis eleifend, orci eros dictum risus, sed pellentesque elit lorem et dui. Nullam neque augue, varius molestie cursus ut, bibendum vel eros. Pellentesque habitant morbi tristique senectus et netus et malesuada fames ac turpis egestas. Nullam vitae venenatis orci, id rutrum nisl. In condimentum pharetra volutpat. Quisque quis diam id neque feugiat ultricies.</p>
         </nav>
     </main>
+    <footer>
 
+    </footer>
+    <p class="copy">&copy; 2019 EAH</p>
 </body>
 </html>
