--- a/index.html
+++ b/index.html
@@ -26,7 +26,9 @@
     <main class="container">
         <nav id="About">
             <h1>útskýra leikinn</h1>
-            <p>Vivamus magna turpis, imperdiet et ex et, scelerisque luctus nulla. Nam accumsan ante arcu. Proin ultricies neque ut ante semper convallis. Donec et neque in nulla ultrices accumsan. Suspendisse quis lacus ac quam eleifend ullamcorper quis non lorem. Curabitur nec elit ac neque porta lobortis sit amet in quam. Suspendisse id nisl nec tellus bibendum placerat. Praesent suscipit, lorem a rutrum vestibulum, mi dolor tempus ante, ac tincidunt leo magna ut turpis. Pellentesque rutrum varius massa quis molestie. Cras condimentum, eros et convallis eleifend, orci eros dictum risus, sed pellentesque elit lorem et dui. Nullam neque augue, varius molestie cursus ut, bibendum vel eros. Pellentesque habitant morbi tristique senectus et netus et malesuada fames ac turpis egestas. Nullam vitae venenatis orci, id rutrum nisl. In condimentum pharetra volutpat. Quisque quis diam id neque feugiat ultricies.</p>
+            <p>overwatch er litríkur FPS leikur sem einblínir á samvinnu. Það eru sex í liði og það eru yfir 30 hetjur sem er hægt að velja úr. hver hetja er annaðhvort Tank, Damage eða support. Það er yfir 20 maps sem leikurinn gerist í. Þessir heimir skiptist í fjögur öðruvísi gerðir þar sem það er öðruvísi markmið. Þessar fjórar týpur heita Assult, Escort, Hybrid og Control. 
+Vanarlega virkar leikur svo að eitt lið er að defanda og hitt er að attacka. Assult er með tvo capture point sem þarf að sigra eða ná að defenda. Escort er með payload sem eitt lið þarf að reyna ná því á endan á mappinu og hitt liðið þarf að reyna stöðva þá. Hybrid er blanda af Ecort og Assult þar sem það er eitt capture point og svo unlockar payloadið. Control er bara með einn capture point sem bæði liðinn reyna að captur’a og sá sem nær að halda pointinu til 100% vinnur. Overwatch kom út árið 2016 og var hannaður og gefinn út af Blizzard Entertainment.
+</p>
         </nav>
         <nav id="Roles">
             <h1>Roles</h1>
