Bæta inn role logos og grid fyrir roles

--- a/index.html
+++ b/index.html
@@ -30,15 +30,27 @@
 Vanarlega virkar leikur svo að eitt lið er að defanda og hitt er að attacka. Assult er með tvo capture point sem þarf að sigra eða ná að defenda. Escort er með payload sem eitt lið þarf að reyna ná því á endan á mappinu og hitt liðið þarf að reyna stöðva þá. Hybrid er blanda af Ecort og Assult þar sem það er eitt capture point og svo unlockar payloadið. Control er bara með einn capture point sem bæði liðinn reyna að captur’a og sá sem nær að halda pointinu til 100% vinnur. Overwatch kom út árið 2016 og var hannaður og gefinn út af Blizzard Entertainment.
 </p>
         </nav>
-        <nav id="Roles">
-            <h1>Roles</h1>
-            <p>Tank 
-                    Tank role’ið er frontline’ið á liðinu þínu það eru þeir sem taka allt damage’ið fyrir liðið sitt annaðhvort með skjöldum, búbblum eða bara með að vera með meira líf en hinir of fara fyrir liðið sitt. Tank skiptist í main-tank og off-tank. main-tank er vanarlega fremst með skjöld að verja alla mest og off-tank er meira til að verja einstaklinga og að gera damage líka.
-                    Damage
-                    Damage role’ið er role’ið sem getur haft mestu áhrifinn á leikinn. Þeir hafa öðruvísi krafta og byssur en eina markmiðið þeirra er að drepa hitt liðið. Það eru 16 damage hetjur sem eru allar hafa aðeins öðruvísi leið til að drepa hina. Maður gæti valið fullt af öðruvísi hetjum eins soldier með assualt rifle, Genji með shuriken eða Doomfist með Rocketpunch.
-                     Support
-                    Support role’ið er í backline’inu að halda liðinu lifanda með healing. Supports eru sá sem halda Tanks og Damage í bardaganum og þeir geta líka gert smá auka. supports skiptast í main-healer og off-healer. main-healer er sá sem healer mest og off-healer gerir aðeins minna healing er er með eithvað auka sem þeir boosta eins og speed eða damage.
+        <h1>Roles</h1>
+        <nav class="roles" id="Roles">
+            
+                <nav class="tank">
+                    <img src="/myndir/tankLogo.png" alt="">
+                    <p>
+                    <h3>Tank</h3>Tank role’ið er frontline’ið á liðinu þínu það eru þeir sem taka allt damage’ið fyrir liðið sitt annaðhvort með skjöldum, búbblum eða bara með að vera með meira líf en hinir of fara fyrir liðið sitt. Tank skiptist í main-tank og off-tank. main-tank er vanarlega fremst með skjöld að verja alla mest og off-tank er meira til að verja einstaklinga og að gera damage líka.
                     </p>
+                </nav>
+                <nav class="damage">
+                    <img src="/myndir/damageLogo.png" alt="">
+                    <p>
+                    <h3>Damage</h3>Damage role’ið er role’ið sem getur haft mestu áhrifinn á leikinn. Þeir hafa öðruvísi krafta og byssur en eina markmiðið þeirra er að drepa hitt liðið. Það eru 16 damage hetjur sem eru allar hafa aðeins öðruvísi leið til að drepa hina. Maður gæti valið fullt af öðruvísi hetjum eins soldier með assualt rifle, Genji með shuriken eða Doomfist með Rocketpunch.
+                    </p>
+                </nav>
+                <nav class="support">
+                    <img src="/myndir/supportLogo.png" alt="">
+                    <p>                
+                    <h3>Support</h3>Support role’ið er í backline’inu að halda liðinu lifanda með healing. Supports eru sá sem halda Tanks og Damage í bardaganum og þeir geta líka gert smá auka. supports skiptast í main-healer og off-healer. main-healer er sá sem healer mest og off-healer gerir aðeins minna healing er er með eithvað auka sem þeir boosta eins og speed eða damage.
+                    </p>
+                </nav>
         </nav>
         <nav id="Development">
             <h1>Þróun</h1>
