Bæta inn footer og gera responsive

--- a/index.html
+++ b/index.html
@@ -25,44 +25,46 @@
     </nav>
     <main class="container">
         <nav id="About">
-            <h1>útskýra leikinn</h1>
-            <p>Overwatch er litríkur FPS leikur sem einblínir á samvinnu. Það eru sex í liði og það eru yfir 30 hetjur sem er hægt að velja úr. hver hetja er annaðhvort Tank, Damage eða support. Það er yfir 20 maps sem leikurinn gerist í. Þessir heimir skiptist í fjögur öðruvísi gerðir þar sem það er öðruvísi markmið. Þessar fjórar týpur heita Assult, Escort, Hybrid og Control. 
-Vanarlega virkar leikur svo að eitt lið er að defanda og hitt er að attacka. Assult er með tvo capture point sem þarf að sigra eða ná að defenda. Escort er með payload sem eitt lið þarf að reyna ná því á endan á mappinu og hitt liðið þarf að reyna stöðva þá. Hybrid er blanda af Ecort og Assult þar sem það er eitt capture point og svo unlockar payloadið. Control er bara með einn capture point sem bæði liðinn reyna að captur’a og sá sem nær að halda pointinu til 100% vinnur. Overwatch kom út árið 2016 og var hannaður og gefinn út af Blizzard Entertainment.
-</p>
+            <h1>About</h1>
+            <p>
+                Overwatch er litríkur FPS leikur sem einblínir á samvinnu. Það eru sex í liði og það eru yfir 30 hetjur sem er hægt að velja úr. hver hetja er annaðhvort Tank, Damage eða support. Það er yfir 20 maps sem leikurinn gerist í. Þessir heimir skiptist í fjögur öðruvísi gerðir þar sem það er öðruvísi markmið. Þessar fjórar týpur heita Assult, Escort, Hybrid og Control. Vanarlega virkar leikur svo að eitt lið er að defanda og hitt er að attacka. Assult er með tvo capture point sem þarf að sigra eða ná að defenda. Escort er með payload sem eitt lið þarf að reyna ná því á endan á mappinu og hitt liðið þarf að reyna stöðva þá. Hybrid er blanda af Ecort og Assult þar sem það er eitt capture point og svo unlockar payloadið. Control er bara með einn capture point sem bæði liðinn reyna að captur’a og sá sem nær að halda pointinu til 100% vinnur. Overwatch kom út árið 2016 og var hannaður og gefinn út af Blizzard Entertainment.
+            </p>
         </nav>
         <h1>Roles</h1>
         <nav class="roles" id="Roles">
             
                 <nav class="tank">
-                    <img src="/myndir/tankLogo.png" alt="">
+                    <img src="/myndir/tankLogo.png" width="70%">
                     <p>
                     <h3>Tank</h3>Tank role’ið er frontline’ið á liðinu þínu það eru þeir sem taka allt damage’ið fyrir liðið sitt annaðhvort með skjöldum, búbblum eða bara með að vera með meira líf en hinir of fara fyrir liðið sitt. Tank skiptist í main-tank og off-tank. main-tank er vanarlega fremst með skjöld að verja alla mest og off-tank er meira til að verja einstaklinga og að gera damage líka.
                     </p>
                 </nav>
                 <nav class="damage">
-                    <img src="/myndir/damageLogo.png" alt="">
+                    <img src="/myndir/damageLogo.png" width="70%">
                     <p>
                     <h3>Damage</h3>Damage role’ið er role’ið sem getur haft mestu áhrifinn á leikinn. Þeir hafa öðruvísi krafta og byssur en eina markmiðið þeirra er að drepa hitt liðið. Það eru 16 damage hetjur sem eru allar hafa aðeins öðruvísi leið til að drepa hina. Maður gæti valið fullt af öðruvísi hetjum eins soldier með assualt rifle, Genji með shuriken eða Doomfist með Rocketpunch.
                     </p>
                 </nav>
                 <nav class="support">
-                    <img src="/myndir/supportLogo.png" alt="">
+                    <img src="/myndir/supportLogo.png" width="70%">
                     <p>                
                     <h3>Support</h3>Support role’ið er í backline’inu að halda liðinu lifanda með healing. Supports eru sá sem halda Tanks og Damage í bardaganum og þeir geta líka gert smá auka. supports skiptast í main-healer og off-healer. main-healer er sá sem healer mest og off-healer gerir aðeins minna healing er er með eithvað auka sem þeir boosta eins og speed eða damage.
                     </p>
                 </nav>
         </nav>
         <nav id="Development">
-            <h1>Þróun</h1>
+            <h1>Development</h1>
             <p>Overwatch var tilkynntur árið 2014 og árið 2015 kom lokuð og opinn beta. Þar sem voru aðeins  21 hetjur og leikurinn var ekki alveg kláraður en var mjög nálægt því. Overwatch kom svo formlega út 24 maí. 2016. Með leik eins og Overwatch þá eru stöðugar uppfærslur á leiknum eins. það er alltaf að vera bæta við nýjum hetjum og möppum til að búa til meiri spennu í kringum leikinn. Líka þarf alltaf að til dæmis ef ein hetja er of góð og önnur of léleg þá er breytt þeim til að halda jafnvægi í leiknum. t.d Það var breytt Mercy svo Ultimate abilti-ið hennar varð að venjulegu abilitý sem er bara hægt að nota hverja 30 sek og gefið henni nýtt ultimate. Og svo er líka bara verið að breyta hvernig leikurinn virkar. eins og þegar það var bætt við role queue sem þýðir að áður en þú ferð í leik þá velurðu hvaða role þú vilt spila og það verða að vera 2 Tank- 2 Damage- 2 Supports. áður fyrir þetta uppdate gat maður valið hvað sem er bara inn í leiknum og það var ekkert limit. Nýlega var sagt að þau mundu gera framhald af Overwatch sem heitir Overwatch 2. Sem í gruninn virkar alveg eins og Overwatch en lítur miklu betur út og mun vera með meiri PvE missions og meiri áherslu á sögu</p>
         </nav>
         <nav id="Lore">
-            <em><h1>Lore</h1></em>
+            <h1>Lore</h1>
             <p>Overwatch er task force sem var upprunalega gert til að stoppa uppreisn vélmenna en. Það hafði verið gert nýjar framfarir með hernaðar vélmenni sem seinna var slökkt á en stuttu seinna kveiktu þau öll á sér og byrjuðu árásir á verksmiðjur og borgir. Það  var reynt að berjast á móti þeim en tókst ekki fyrr en það var sett saman Overwatch sem náðu fljótlega að vinna gegn þeim. Hryðjuverkasamtök þekkt sem Talon unnu mikið til að taka niður Overwatch og það blandað við mistök sem þau gerðu endaði með því að Overwatch var tekið niður og það var gert ólöglegt að gera eitthvað með Overwatch. 6 árum eftir Overwatch var tekið niður er seinni vélmenna uppreisnin byrjuð og Talon ræðst á gamlar höfuðstövar þeirra til að ná upplýsingum um alla meðlimi Overwatch til að drepa þá. Eftir einn fyrrverandi meðlimur Overwatch, Winston rétt stövðar þau sendir hann boð á alla meðlimi Overwatch um að endurræsa samtökin.</p>
         </nav>
     </main>
     <footer>
-
+        <nav class="listi1">Lorem Ipsum </nav>
+        <nav class="listi2">Lorem Ipsum </nav>
+        <nav class="listi3">Lorem Ipsum </nav>
     </footer>
     <p class="copy">&copy; 2019 EAH</p>
 </body>
