--- a/index.html
+++ b/index.html
@@ -66,6 +66,6 @@
         <nav class="listi2">Lorem Ipsum </nav>
         <nav class="listi3">Lorem Ipsum </nav>
     </footer>
-    <p class="copy">&copy; 2019 EAH</p>
+    <p class="copy">&copy; 2019 EAH & EAH</p>
 </body>
 </html>
