--- a/index.html
+++ b/index.html
@@ -62,9 +62,34 @@
         </nav>
     </main>
     <footer>
-        <nav class="listi1">Lorem Ipsum </nav>
-        <nav class="listi2">Lorem Ipsum </nav>
-        <nav class="listi3">Lorem Ipsum </nav>
+        <nav class="listi1">          
+            <h4>Egill Ari</h4>
+            <dl>
+              <dt>Nafn:</dt>
+                <dd>Egill Ari </dd>
+              <dt>tölvupóstur:</dt>
+                <dd>Egillari@gmail.com</dd>
+              <dt>Áfangi:</dt>
+                <dd>VEFÞ1 </dd>
+              <!--áfangi-->
+            </dl></nav>
+        <nav class="listi2">
+            <h4>Social Media</h4>
+            <li><a href="https://twitter.com/PlayOverwatch?s=20">Twitter</a></li>
+            <li><a href="https://www.instagram.com/playoverwatch/?hl=en">Instagram</a></li>
+            <li><a href="https://playoverwatch.com/en-gb/">Heimasíða</a></li>
+        </nav>
+        <nav class="listi3">          
+            <h4>Elías Andri </h4>
+            <dl>
+              <dt>Nafn:</dt>
+                <dd>Elías Andri </dd>
+              <dt>Tölvupóstur:</dt>
+                <dd>eliashar19@tskoli.is</dd>
+              <dt>Áfangi:</dt>
+                <dd>VEFÞ1</dd>
+            </dl>
+        </nav>
     </footer>
     <p class="copy">&copy; 2019 EAH & EAH</p>
 </body>
