--- a/index.html
+++ b/index.html
@@ -60,6 +60,7 @@
             <h1>Lore</h1>
             <p>Overwatch er task force sem var upprunalega gert til að stoppa uppreisn vélmenna en. Það hafði verið gert nýjar framfarir með hernaðar vélmenni sem seinna var slökkt á en stuttu seinna kveiktu þau öll á sér og byrjuðu árásir á verksmiðjur og borgir. Það  var reynt að berjast á móti þeim en tókst ekki fyrr en það var sett saman Overwatch sem náðu fljótlega að vinna gegn þeim. Hryðjuverkasamtök þekkt sem Talon unnu mikið til að taka niður Overwatch og það blandað við mistök sem þau gerðu endaði með því að Overwatch var tekið niður og það var gert ólöglegt að gera eitthvað með Overwatch. 6 árum eftir Overwatch var tekið niður er seinni vélmenna uppreisnin byrjuð og Talon ræðst á gamlar höfuðstövar þeirra til að ná upplýsingum um alla meðlimi Overwatch til að drepa þá. Eftir einn fyrrverandi meðlimur Overwatch, Winston rétt stövðar þau sendir hann boð á alla meðlimi Overwatch um að endurræsa samtökin.</p>
         </nav>
+        <div align="center" ><iframe width="560" height="315" src="https://www.youtube.com/embed/FqnKB22pOC0" frameborder="0" allow="accelerometer; autoplay; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe></div>
     </main>
     <footer>
         <nav class="listi1">          
